version 1.8
	* Ability to have multiple <ignore/> regular expressions
	  in the instrument task (Alexei Yudichev).
	* Ability to specify a minimum bracnh coverage rate and
	  line coverage rate for each package when using
	  cobertura-check.

﻿version 1.7
	* log4j is no longer used by the Cobertura classes that are
	  accessed by instrumented Java code.  This means you will
	  not need to add log4j to your project's classpath in order
	  to use Cobertura (but log4j is still required when
	  instrumenting and reporting).
	* Upgraded from asm 2.0 to asm 2.1.  No code changes were
	  needed.
	* Improved the merge task.  It should work correctly now
	  (with help from  Björn Beskow).
	* Fixed the ability to specify a data file in the merge task.
	* Changed the command-line interface to the merge task and
	  added a helper batch/shell script.
	* Added better error checking to the merge task.
	* Fixed a bug where an empty or incomplete coverage data
	  file would be written when you test classes inside Tomcat,
	  and you stop Tomcat using the shutdown.bat or shutdown.sh
	  scripts.  This would result in an EOFException when running
	  cobertura-report.
	* Added support for classes compiled with AspectJ.
	* Cobertura now produces valid XHTML 1.0 reports.

version 1.6
	* Can now use multiple filesets in the cobertura-instrument
	  task (Thanks to Grzegorz Lukasik).
	* Can now use multiple filesets in the cobertura-report task
	  (Thanks to Jeremy Thomerson, Grzegorz Lukasik and James Seigel).
	* No longer using the Java version of GNU GetOpt
	* Fixed a bug where the total number of classes displayed in
	  the HTML report included anonymous classes when it should
	  not have.

version 1.5
	* Shortened the header shown when running Cobertura (Thanks
	  to Jarkko Viinamäki).
	* Don't save the data file twice after instrumenting.
	* Print a warning when running cobertura-report with a
	  data file that does not contain information from the
	  instrument step.